--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: GitHub Pages deploy
 
 on:
@@ -12,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout 🛎️
+      - name: Checkout 🛎
         uses: actions/checkout@v4.1.3
       - name: Use Node.js 18.x
         uses: actions/setup-node@v1
@@ -28,9 +25,9 @@ jobs:
       - name: Build my App
         run: npm run build && touch ./out/.nojekyll
 
-      - name: Deploy 🚀
+      - name: Deploy 
         uses: JamesIves/github-pages-deploy-action@v4.6.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          branch: public # The branch the action should deploy to.
+          branch: gh-pages # Alterar para gh-pages para publicar o site
           folder: out # The folder the action should deploy to.
