--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,5 +32,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4.6.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          branch: public # The branch the action should deploy to.
+          branch: deploy-testing # The branch the action should deploy to.
           folder: out # The folder the action should deploy to.
