--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "framer-motion": "^11.2.6",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
