--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "sad-portifolio": "file:"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
