--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "framer-motion": "^11.2.6",
-    "next": "14.1.4",
+    "next": "15.2.4",
     "react": "^18",
+    "react-animated-numbers": "^1.0.1",
     "react-dom": "^18",
     "react-type-animation": "^3.2.0",
     "sad-portifolio": "file:"
